Update with login and signup

--- a/folder/home/index.ejs
+++ b/folder/home/index.ejs
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Twittter</title>
+    <title> Home Twittter</title>
 
     <script src="https://use.fontawesome.com/9243569efd.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="/home/style.css">
+    <link rel="stylesheet" href="css/style.css">
     
 </head>
 <body>
@@ -25,7 +25,7 @@
               </li>
 
               <li class="nav-item ">
-                <a class="nav-link" href="#"><i class="fa fa-search-o"></i> Explore</a>
+                <a class="nav-link" href="#"><i class="fa fa-search"></i> Explore</a>
               </li>
 
               <li class="nav-item ">
@@ -73,7 +73,7 @@
       </nav>
   <div class="WH">
     <div class="User-Tweet-Input">
-        <img class="user-profile-picture" src="./images/Dab.jpg" alt="Profile Photo">
+        <img class="user-profile-picture" src="../images/Dab.jpg" alt="Profile Photo">
         <input class="tweet-input" id="postsomething" type="text" placeholder="What's happening?" maxlength="280">
     
     <div class="tweet-controls">
@@ -89,37 +89,12 @@
         --> </div>
 </div>
 
-    <!--  <header>
-          <div id="cover-photo-wrapper">
-                <img src="images/AppleEDUProfile.jpg"alt="Cover Image - Abhinav" />
-          </div>
-
-          <div id="profile-photo-wrapper">
-              <div class="container">
-                  <div class="row">
-                      <div class="col-4">
-                          <img src="images/Dab.jpg" id="profile-photo" alt="Profile Photo - Abhinav" />
-                      </div>
-                      <div class="col-6">
-                        <a href="#" class="profile-stats">Tweets<span>320</span></a>
-                        <a href="#" class="profile-stats">Following<span>30</span></a>
-                        <a href="#" class="profile-stats">Followers<span>8420</span></a>
-                        <a href="#" class="profile-stats">Likes<span>2689</span></a>
-                    </div>
-                    <div class="col-2">
-                        
-                        <button type="button" class="btn btn-outline-primary" id="follow-button">Follow</button>
-                    </div>
-                  </div>
-              </div>
-          </div>
-      </header>-->
 
     <div class="container-fluid">
         <div class="row">
             <section class="col-2" id="profile">
                 <hgroup>
-                    <a href="#"><h1>Abhinav Purohit <i class="fa fa-check-circle" aria-hidden="true"></i></h1></a>
+                    <a href="#"><h1>  Abhinav Purohit <i class="fa fa-check-circle" aria-hidden="true"></i></h1></a>
                     <a href="#"><h2>@purohit47</h2></a>
                 </hgroup>
                 <p>This is Twitter Clone made by Abhinav Purohit.</p>
@@ -129,20 +104,20 @@
                 <br>
                 <span> <i class="fa fa-image"></i> <a href="#">75 Photos and videos</a></span>
                 <div id="photos-and-videos">
-                   <img src="images/wolf.jpg"  height="50px" width="30px" alt="Tweeted Photo" />
-                   <img src="images/ring.jpg" height="50px" width="30px" alt="Tweeted Photo" />
+                   <img src="../images/wolf.jpg"  height="50px" width="30px" alt="Tweeted Photo" />
+                   <img src="../images/ring.jpg" height="50px" width="30px" alt="Tweeted Photo" />
                    
-                   <img src="images/triangle.jpg"  height="50px" width="30px" alt="Tweeted Photo" />        
+                   <img src="../images/triangle.jpg"  height="50px" width="30px" alt="Tweeted Photo" />        
                    
-                   <br><img src="images/47.png" height="50px" width="30px" alt="Tweeted Photo" />
+                   <br><img src="../images/47.png" height="50px" width="30px" alt="Tweeted Photo" />
                    
-                   <img src="images/tree.png" height="50px" width="30px" alt="Tweeted Photo" />
-                   <img src="images/bolt.jpg" height="50px" width="30px" alt="Tweeted Photo" />
+                   <img src="../images/tree.png" height="50px" width="30px" alt="Tweeted Photo" />
+                   <img src="../images/bolt.jpg" height="50px" width="30px" alt="Tweeted Photo" />
                    <br>
-                <img src="images/eye.jpg" height="50px" width="30px" alt="Tweeted Photo" />
+                <img src="../images/eye.jpg" height="50px" width="30px" alt="Tweeted Photo" />
                    
-                   <img src="images/light.jpg" height="50px" width="30px" alt="Tweeted Photo" />
-                   <img src="images/wings.jpg" height="50px" width="30px" alt="Tweeted Photo" />
+                   <img src="../images/light.jpg" height="50px" width="30px" alt="Tweeted Photo" />
+                   <img src="../images/wings.jpg" height="50px" width="30px" alt="Tweeted Photo" />
                    <br>
                 </div>
             </section> 
@@ -152,12 +127,12 @@
                     <div class="row no-gutters">
                         <div class="col-1">
                            
-                            <img src="images/ravi.jpg" class="profile-thumbnail" alt="Profile Photo- Ravi Shastri" />    
+                            <img src="../images/ravi.jpg" class="profile-thumbnail" alt="Profile Photo- Ravi Shastri" />    
                         </div>
                         <div class="col-11 tweet-body">
                             <a href="#" class="tweet-username"> <span class="username-name">Ravi Shastri </span> <i class="fa fa-check-circle"></i> <span class="username-handle"> @thebhandcoach &nbsp;· 2hr</span></a>
                             <p> Dhoni finishes off in style. India lifts the worldcup after 28 years and it's an Indian Captain who has been magnificent on the night of the finals.  </p> 
-                            <img src="images/dhoni.jpg" alt="Dhoni">
+                            <img src="../images/dhoni.jpg" alt="Dhoni">
                             <nav>
                                 <a href="#" class="comments"> <i class="fa fa-comment-o"></i> 8k</a>
                                 <a href="#" class="retweets"> <i class="fa fa-retweet"></i> 782</a>
@@ -172,7 +147,7 @@
                     <!--this no-gutters removes margin and padding -->
                     <div class="row no-gutters">
                     <div class="col-1">
-                            <img src="images/ro.jpg" class="profile-thumbnail" alt="Profile Photo- Rohit Sharma"/>
+                            <img src="../images/ro.jpg" class="profile-thumbnail" alt="Profile Photo- Rohit Sharma"/>
                     </div>
                     <div class="col-11 tweet-body">
                         <a href="#" class="tweet-username"> <span class="username-name">Rohit Sharma</span> <i class="fa fa-check-circle"></i> <span class="username-handle"> @iamro45 &nbsp;· 3m</span></a>
@@ -192,12 +167,12 @@
                     <div class="row no-gutters">
                         <div class="col-1">
                            
-                            <img src="images/Modi.jpg" class="profile-thumbnail" alt="Profile Photo- narendramodi" />    
+                            <img src="../images/Modi.jpg" class="profile-thumbnail" alt="Profile Photo- narendramodi" />    
                         </div>
                         <div class="col-11 tweet-body">
                             <a href="#" class="tweet-username"> <span class="username-name">Narendra Modi</span> <i class="fa fa-check-circle"></i> <span class="username-handle"> @narendramodi &nbsp;· Nov 8</span></a>
                             <p>Went to Advani Ji’s residence to wish him on his birthday. It is always a delight to spend time with him. For Karyakartas like me, Advani Ji’s support and guidance remain invaluable. His contributions to nation building are immense.</p> 
-                            <img src="images/modiadvani.jpg" alt="ModiPost">
+                            <img src="../images/modiadvani.jpg" alt="ModiPost">
                             <nav>
                                 <a href="#" class="comments"> <i class="fa fa-comment-o"></i> 6.5k</a>
                                 <a href="#" class="retweets"> <i class="fa fa-retweet"></i> 12.9</a>
@@ -212,7 +187,7 @@
                     <!--this no-gutters removes margin and padding -->
                     <div class="row no-gutters">
                     <div class="col-1">
-                            <img src="images/2.jpg" class="profile-thumbnail" alt="Profile Photo- Ricky Gervais" />
+                            <img src="../images/2.jpg" class="profile-thumbnail" alt="Profile Photo- Ricky Gervais" />
                     </div>
                     <div class="col-11 tweet-body">
                         <a href="#" class="tweet-username"> <span class="username-name">Ricky Gervais</span> <i class="fa fa-check-circle"></i> <span class="username-handle"> @rickygervais &nbsp;· 4hr</span></a>
@@ -231,7 +206,7 @@
                     <!--this no-gutters removes margin and padding -->
                     <div class="row no-gutters">
                     <div class="col-1">
-                            <img src="images/Modi.jpg" class="profile-thumbnail" alt="Profile Photo - narendramodi"/>
+                            <img src="../images/Modi.jpg" class="profile-thumbnail" alt="Profile Photo - narendramodi"/>
                     </div>
                     <div class="col-10 tweet-body">
                         <a href="#" class="tweet-username"> <span class="username-name">Narendra Modi</span> <i class="fa fa-check-circle"></i> <span class="username-handle"> @narendramodi &nbsp;· 3h</span></a>
@@ -252,7 +227,7 @@
                     <!--this no-gutters removes margin and padding -->
                     <div class="row no-gutters">
                     <div class="col-1">
-                            <img src="images/ANI.jpg" class="profile-thumbnail" alt="Profile Photo- Rohit Sharma"/>
+                            <img src="../images/ANI.jpg" class="profile-thumbnail" alt="Profile Photo- Rohit Sharma"/>
                     </div>
                     <div class="col-11 tweet-body">
                         <a href="#" class="tweet-username"> <span class="username-name">ANI</span> <i class="fa fa-check-circle"></i> <span class="username-handle"> @ANI &nbsp;· 9h</span></a>
@@ -271,7 +246,7 @@
                     <!--this no-gutters removes margin and padding -->
                     <div class="row no-gutters">
                     <div class="col-1">
-                            <img src="images/ANI.jpg" class="profile-thumbnail" alt="Profile Photo- ANI"/>
+                            <img src="../images/ANI.jpg" class="profile-thumbnail" alt="Profile Photo- ANI"/>
                     </div>
                     <div class="col-11 tweet-body">
                         <a href="#" class="tweet-username"> <span class="username-name">ANI</span> <i class="fa fa-check-circle"></i> <span class="username-handle"> @ANI &nbsp;·10m</span></a>
@@ -291,12 +266,12 @@
                     <div class="row no-gutters">
                         <div class="col-1">
                            
-                            <img src="images/AppleEDUProfile.jpg" class="profile-thumbnail" alt="Profile Photo- Apple EDU" />    
+                            <img src="../images/AppleEDUProfile.jpg" class="profile-thumbnail" alt="Profile Photo- Apple EDU" />    
                         </div>
                         <div class="col-11 tweet-body">
                             <a href="#" class="tweet-username"> <span class="username-name">Apple Education </span> <i class="fa fa-check-circle"></i> <span class="username-handle"> @AppleEDU &nbsp;· 2hr</span></a>
                             <p> Clips is a free app that lets teachers and students create and share engaging videos. In this video you’ll learn how to use Clips to create instructional videos — and how students can make videos to share what they’ve learned. </p> 
-                            <img src="images/apple.jpg" alt="Apple Education">
+                            <img src="../images/apple.jpg" alt="Apple Education">
                             <nav>
                                 <a href="#" class="comments"> <i class="fa fa-comment-o"></i> 8k</a>
                                 <a href="#" class="retweets"> <i class="fa fa-retweet"></i> 782</a>
@@ -321,7 +296,7 @@
                                     <div class="wtf131">Space</div>
                                     <div class="wtf132">Some unusual pattern was spotted in the sky the previous night.</div>
                                 </div>
-                                <div><img class="img-WHR" src="./images/ring.jpg" alt=""></div>
+                                <div><img class="img-WHR" src="../images/ring.jpg" alt=""></div>
                             </div>    
                                 
                         </div>
@@ -346,7 +321,7 @@
                                     <div class="wtf131">Cricket</div>
                                     <div class="wtf132">Mumbai Indians defeated Delhi capitals to clinch their 5th title win.</div>
                                 </div>
-                            <div><img class="img-WHR" src="./Images/ipl-trophy.png" alt=""></div>
+                            <div><img class="img-WHR" src="../Images/ipl-trophy.png" alt=""></div>
     
                             </div>   
                         </div>
@@ -367,7 +342,7 @@
     
                     <div class="follow_container">
                         <div class="Follow">
-                                    <img class="img-WTF" src="./images/bolt.jpg" alt="">
+                                    <img class="img-WTF" src="../images/bolt.jpg" alt="">
                                     <div class="Namewrap">
                                         <div class="Name-WTF">Flash</div>
                                         <div class="ID-WTF"> @flash</div>
@@ -379,7 +354,7 @@
     
                     <div class="follow_container">
                         <div class="Follow">
-                                    <img class="img-WTF" src="./images/db.jpg" alt="">
+                                    <img class="img-WTF" src="../images/db.jpg" alt="">
                                     <div class="Namewrap">
                                         <div class="Name-WTF">David Beckham</div>
                                         <div class="ID-WTF">@davidbecham21</div>
@@ -391,7 +366,7 @@
     
                     <div class="follow_container">
                         <div class="Follow">
-                                    <img class="img-WTF" src="./images/crown.jpg" alt="">
+                                    <img class="img-WTF" src="../images/crown.jpg" alt="">
                                     <div class="Namewrap">
                                         <div class="Name-WTF">Flower</div>
                                         <div class="ID-WTF">@pink</div>
@@ -403,7 +378,7 @@
     
                     <div class="follow_container">
                         <div class="Follow">
-                                    <img class="img-WTF" src="./images/eye.jpg" alt="">
+                                    <img class="img-WTF" src="../images/eye.jpg" alt="">
                                     <div class="Namewrap">
                                         <div class="Name-WTF">John Cena</div>
                                         <div class="ID-WTF">@johncena</div>
@@ -434,65 +409,6 @@
             </div>
 
         
-    
-
- <!--
-    <section class="col-2">
-     WHAT'S HAPPENING SECTION            
-
-     <div class="WHR">
-        <div class="p0">What's Happening?</div>
-
-        <div class="p1">
-            <div class="p11">Trending Worldwide</div>
-            <div class="p12">#BreakingNews</div>
-            <div class="p13">
-                <div class="wrap">
-                    <div class="wrap1">
-                        <div class="p131">Space</div>
-                        <div class="p132">Lunar photography improves the discovery of the moon</div>
-                    </div>
-                    <div><img class="img-WHR" src="./Images/moon.jfif" alt=""></div>
-                </div>    
-                    
-            </div>
-            <div class="p11">10,1094 people are Tweeting about this</div>
-        </div>
-
-        <div class="p2">
-            <div class="p21">Trending Worldwide</div>
-            <div class="p22">#WorldNews</div>
-            <div class="p23">125K Tweets</div>
-            <div class="p24">5,094 people are tweeting about this</div>
-        </div>
-
-        <div class="p1">
-            <div class="p11">Trending Worldwide</div>
-            <div class="p12">#BreakingNews</div>
-            <div class="p13">
-                <div class="wrap">
-                    <div class="wrap1">
-                        <div class="p131">Animals</div>
-                        <div class="p132">These cats are ready for #INTERNATIONALCATDAY</div>
-                    </div>
-                <div><img class="img-WHR" src="./Images/cat.jfif" alt=""></div>
-
-                </div>   
-            </div>
-            <div class="p11">2,757 people are Tweeting about this</div>
-        </div>
-
-        <div class="p2">
-            <div class="p21">Trending Worldwide</div>
-            <div class="p22">#GreatestOfAllTime</div>
-            <div class="p23">100K Tweets</div>
-            <div class="p24">4,123 people are tweeting about this</div>
-        </div>
-
-        <div class="p5">Show more</div>
-    </div>     
-    
- </section>-->
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
