--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Home Twittter</title>
+    <title>(<%= tweets.length %>) Home Twittter</title>
 
     <script src="https://use.fontawesome.com/9243569efd.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -29,7 +29,7 @@
               </li>
 
               <li class="nav-item ">
-                <a class="nav-link" href="#"><i class="fa fa-bell"></i> <sup>27+</sup> Notifications</a>
+                <a class="nav-link" href="#"><i class="fa fa-bell"></i> <sup>(<%= tweets.length %>)+</sup> Notifications</a>
               </li>
 
               <li class="nav-item ">
@@ -71,7 +71,7 @@
         </div>
     </div>
       </nav>
-  <div class="WH">
+  <form class="WH" method="post"">
     <div class="User-Tweet-Input">
         <img class="user-profile-picture" src="../images/Dab.jpg" alt="Profile Photo">
         <input class="tweet-input" id="postsomething" type="text" placeholder="What's happening?" maxlength="280">
@@ -90,12 +90,61 @@
 </div>
 
 
-    <div class="container-fluid">
+<div class="Post-container">
+    <% tweets.forEach(function(tweet,index){ %> <% var asciiSum = 0 %> <%
+    [...tweet.name].forEach(function (char,index) {
+    asciiSum+=tweet.name.charCodeAt(index) }) %>
+
+    <div class="post">
+      <img
+        class="profile_img-post"
+        src="./Images/profilepics/<%= (asciiSum%14)+1 %>.jfif"
+        alt="image"
+      />
+      <div class="post-content">
+        <div class="post-userName">
+          <div class="Name"><%= tweet.name %></div>
+          <div class="ID">@<%= tweet.userName %></div>
+        </div>
+        <div class="content-text"><%= tweet.content %></div>
+        <div class="icons">
+          <span class="comment"
+            ><div class="comment-hover">
+              <i class="fa fa-comment-o"> 6</i>
+            </div></span
+          >
+          <span class="retweet"
+            ><div class="retweet-hover"><i class="fa fa-retweet"></i></div
+          ></span>
+
+         <!-- <a
+            class="like"
+            href="/tweet/like?token=<%= token %>&id=<%= tweet.id %>"
+          >-->
+            <div class="like-hover">
+              <i class="fa fa-heart-o"> <%= tweet.likes %></i>
+            </div>
+          </a>
+
+         <!-- <a
+            class="delete"
+            href="/tweet/delete?token=<%= token %>&id=<%= tweet.id %>"
+          >-->
+            <div class="delete-hover"><i class="fa fa-trash-o"></i></div>
+          </a>
+        </div>
+      </div>
+    </div>
+    <% }) %>
+
+
+
+   <!-- <div class="container-fluid">
         <div class="row">
             <section class="col-2" id="profile">
                 <hgroup>
-                    <a href="#"><h1>  Abhinav Purohit <i class="fa fa-check-circle" aria-hidden="true"></i></h1></a>
-                    <a href="#"><h2>@purohit47</h2></a>
+                    <a href="#"><div class="Name"><h1>  Abhinav Purohit <i class="fa fa-check-circle" aria-hidden="true"></i></h1></div></a>
+                    <a href="#"> <div class="ID"><h2>@purohit47</h2></div></a>
                 </hgroup>
                 <p>This is Twitter Clone made by Abhinav Purohit.</p>
                 <p><span><i class="fa fa-map-marker"></i> Chandigarh, India</span></p>
@@ -144,7 +193,7 @@
                     </div>
                 </article>
                 <article class="container">
-                    <!--this no-gutters removes margin and padding -->
+                    this no-gutters removes margin and padding 
                     <div class="row no-gutters">
                     <div class="col-1">
                             <img src="../images/ro.jpg" class="profile-thumbnail" alt="Profile Photo- Rohit Sharma"/>
@@ -184,7 +233,7 @@
                     </div>
                 </article>
                 <article class="container">
-                    <!--this no-gutters removes margin and padding -->
+                    this no-gutters removes margin and padding 
                     <div class="row no-gutters">
                     <div class="col-1">
                             <img src="../images/2.jpg" class="profile-thumbnail" alt="Profile Photo- Ricky Gervais" />
@@ -203,7 +252,7 @@
                 </div>
                 </article>
                 <article class="container">
-                    <!--this no-gutters removes margin and padding -->
+                    this no-gutters removes margin and padding 
                     <div class="row no-gutters">
                     <div class="col-1">
                             <img src="../images/Modi.jpg" class="profile-thumbnail" alt="Profile Photo - narendramodi"/>
@@ -224,7 +273,7 @@
                 </div>
                 </article>
                 <article class="container">
-                    <!--this no-gutters removes margin and padding -->
+                    this no-gutters removes margin and padding 
                     <div class="row no-gutters">
                     <div class="col-1">
                             <img src="../images/ANI.jpg" class="profile-thumbnail" alt="Profile Photo- Rohit Sharma"/>
@@ -243,7 +292,7 @@
                 </div>
                 </article>
                 <article class="container">
-                    <!--this no-gutters removes margin and padding -->
+                    this no-gutters removes margin and padding 
                     <div class="row no-gutters">
                     <div class="col-1">
                             <img src="../images/ANI.jpg" class="profile-thumbnail" alt="Profile Photo- ANI"/>
@@ -283,6 +332,9 @@
                     </div>
                 </article>
             </div>
+              -->
+
+
             <section class="col-4" id="rightside">
                 <div class="WHR">
                     <div class="wtf0">What's Happening?</div>
