--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Home Twittter</title>
+    <title> (<%= tweets.length %>) Home Twittter</title>
 
     <script src="https://use.fontawesome.com/9243569efd.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -13,10 +13,6 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             
@@ -59,15 +55,15 @@
             <input class="form-control mr-sm-2" type="search" placeholder="Search Twitter" aria-label="Search" id="searchbar">
                 
           </form> -->
-          <form class="navbar-form" role="search">
+          <form class="navbar-form" method="POST" action="addTweet">
+              <input type="text" name="username" readonly />
             <div class="input-group">
-              <input type="text" class="form-control input-search" placeholder="Search Twitter" name="srch-term" id="srch-term">
-              <div class="input-group-btn">
-                <button class="btn btn-default btn-search" type="submit"><i class="fa fa-search navbar-search-icon"></i></button>
-              </div>
+              <input type="text" class="form-control input-search" placeholder="What's Happening?"" name="content">
+              <button class="btn btn-primary" id="tweet-button" type="submit">Tweet</button>
             </div>
+           
           </form>
-          <a class="btn btn-primary" id="tweet-button">Tweet</a>
+          
         </div>
     </div>
       </nav>
@@ -96,10 +92,10 @@
      
       <div class="post-content">
         <div class="post-userName">
-          <div class="Name"><%= tweet.name %></div>
-          <div class="ID">@<%= tweet.username %></div>
+          <div class="Name"></div>
+          <div class="ID">@<%= tweets.username %></div>
         </div>
-        <div class="content-text"><%= tweet.content %></div>
+        <div class="content-text"></div>
         <div class="icons">
           <span class="comment"
             ><div class="comment-hover">
@@ -110,19 +106,12 @@
             ><div class="retweet-hover"><i class="fa fa-retweet"></i></div
           ></span>
 
-         <!-- <a
-            class="like"
-            href="/tweet/like?token=<%= token %>&id=<%= tweet.id %>"
-          >-->
+        
             <div class="like-hover">
-              <i class="fa fa-heart-o"> <%= tweet.likes %></i>
+              <i class="fa fa-heart-o"> </i>
             </div>
           </a>
 
-         <!-- <a
-            class="delete"
-            href="/tweet/delete?token=<%= token %>&id=<%= tweet.id %>"
-          >-->
             <div class="delete-hover"><i class="fa fa-trash-o"></i></div>
           </a>
         </div>
